--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="main">
     <div class="image-container">
 
-      <img src="/images/drawers.jpg" alt="drawers image">
+      <img src="images/drawers.jpg" alt="drawers image">
     </div>
     <div class="text-content">
       <h2>Shift the overall look and feel by adding these wonderful touches to furniture in your home</h2>
@@ -25,7 +25,7 @@
       <div class="user-content">
 
         <div class="user-details">
-          <img src="/images/avatar-michelle.jpg" alt="user image">
+          <img src="images/avatar-michelle.jpg" alt="user image">
           <div class="user-info">
             <p>Michelle Appleton</p>
             <span>28 Jun 2020</span>
@@ -33,7 +33,7 @@
 
         </div>
         <button>
-          <img src="/images/icon-share.svg" alt="">
+          <img src="images/icon-share.svg" alt="">
         </button>
       </div>
     </div>
@@ -41,9 +41,9 @@
       <div class="main-form">
         <p>SHARE</p>
         <div class="social-icons">
-          <img src="/images/icon-facebook.svg" alt="facebook icon">
-          <img src="/images/icon-twitter.svg" alt="twicon-twitter.svg icon">
-          <img src="/images/icon-pinterest.svg" alt="pinicon-pinterest.svg icon">
+          <img src="images/icon-facebook.svg" alt="facebook icon">
+          <img src="images/icon-twitter.svg" alt="twicon-twitter.svg icon">
+          <img src="images/icon-pinterest.svg" alt="pinicon-pinterest.svg icon">
         </div>
       </div>
       <div class="square "></div>
@@ -53,13 +53,13 @@
 
         <p>SHARE</p>
         <div class="social-icons">
-          <img src="/images/icon-facebook.svg" alt="facebook icon">
-          <img src="/images/icon-twitter.svg" alt="twicon-twitter.svg icon">
-          <img src="/images/icon-pinterest.svg" alt="pinicon-pinterest.svg icon">
+          <img src="images/icon-facebook.svg" alt="facebook icon">
+          <img src="images/icon-twitter.svg" alt="twicon-twitter.svg icon">
+          <img src="images/icon-pinterest.svg" alt="pinicon-pinterest.svg icon">
         </div>
       </div>
       <button>
-        <img src="/images/icon-share.svg" alt="">
+        <img src="images/icon-share.svg" alt="">
       </button>
     </div>
   </div>
